--- a/_data/output.yml
+++ b/_data/output.yml
@@ -1,10 +1,3 @@
-- section: BA Thesis
-  papers: 
-  - title: The Syntax and Semantics of Chinese Across-the-Board Constructions
-    date: 2022
-    publication: University of Chicago
-    type: manuscript
-    url: /files/ba_thesis.pdf
 - section: Journal Articles
   papers:
     - title: "Moving heads to specifiers: Evidence from Mandarin multiple pre-subject modals"
@@ -12,7 +5,7 @@
       publication: Natural Language and Linguistic Theory
       type: manuscript
       url: /files/NLLT21.pdf
-      italic: true
+      # italic: true
       author: Jackie Yan-Ki Lai, first author
 - section: Talks
   papers:
@@ -37,4 +30,10 @@
       date: May 2020
       type: slides
       url: /files/slides_for_culc14.pdf
-
+- section: BA Thesis
+  papers: 
+  - title: The Syntax and Semantics of Chinese Across-the-Board Constructions
+    date: 2022
+    publication: University of Chicago
+    type: manuscript
+    url: /files/ba_thesis.pdf
