--- a/_data/output.yml
+++ b/_data/output.yml
@@ -12,8 +12,8 @@
     - title: Mandarin clausal comparatives involve standard embedding
       publication: West Coast Conference on Formal Linguistics 41
       date: May 2023
-      type: poster
-      url: \#
+      type: handout
+      url: /files/WCCFL_Handout.pdf
       author: Zhouyi Sun
     - title: The syntax and semantics of Chinese asymmetric Across-the-Board construction
       publication: Northeast Linguistics Society 53
