--- a/_data/output.yml
+++ b/_data/output.yml
@@ -1,7 +1,7 @@
 - section: Journal Articles
   papers:
     - title: "Moving heads to specifiers: Evidence from Mandarin multiple pre-subject modals"
-      date: To appear
+      date: Aug 2023
       publication: Natural Language and Linguistic Theory
       type: manuscript
       url: /files/NLLT21.pdf
