nels 2024, sub 2024, and wccfl 2025

--- a/_data/output.yml
+++ b/_data/output.yml
@@ -12,6 +12,18 @@
       author: Jackie Yan-Ki Lai, first author
 - section: Talks
   papers:
+    - title: Diagnosing modal clause structure with focus-sensitive operators in Mandarin Chinese
+      publication: West Coast Conference on Formal Linguistics 43
+      year: 2025
+      month: Apr
+    - title: The case for the strong and conditional analysis of permission
+      publication: Sinn und Bedeutung 29
+      year: 2024
+      month: Sep
+    - title: <i>Dou</i> as <i>even</i> and plural universal quantification in Mandarin Chinese
+      publication: North East Linguistics Society 54
+      year: 2024
+      month: Jan
     - title: Mandarin clausal comparatives involve standard embedding
       publication: West Coast Conference on Formal Linguistics 41
       year: 2023
@@ -23,7 +35,7 @@
           url: /files/WCCFL_Handout.pdf
       author: Zhouyi Sun
     - title: The syntax and semantics of Chinese asymmetric Across-the-Board construction
-      publication: Northeast Linguistics Society 53
+      publication: North East Linguistics Society 53
       year: 2023
       month: Jan 
       resources: 
