--- a/_data/output.yml
+++ b/_data/output.yml
@@ -42,14 +42,15 @@
         - type: poster
           url: /files/nels_atb_poster.pdf
     - title: A head-to-specifier movement account of multiple pre-subject modals in Mandarin Chinese
-      publication: Society of Linguistics Undergraduate Students, University of Berkeley
+      publication: Society of Linguistics Undergraduate Students, University of 
+      California, Berkeley
       year: 2021
       month: Apr 
       resources:
         - type: slides
           url: /files/slides_for_calslugs.pdf
     - title: New cartographic evidence for clause-medial position of low sentence-final aspect particles in Mandarin Chinese
-      publication: Cornell Undergraduate Linguistics Colloquium, Cornell University
+      publication: Cornell Undergraduate Linguistics Colloquium
       year: 2020
       month: May 
       resources:
