fix small problems

--- a/_data/output.yml
+++ b/_data/output.yml
@@ -42,8 +42,7 @@
         - type: poster
           url: /files/nels_atb_poster.pdf
     - title: A head-to-specifier movement account of multiple pre-subject modals in Mandarin Chinese
-      publication: Society of Linguistics Undergraduate Students, University of 
-      California, Berkeley
+      publication: Society of Linguistics Undergraduate Students, University of California, Berkeley
       year: 2021
       month: Apr 
       resources:
