dou syntax wccfl link

--- a/_data/output.yml
+++ b/_data/output.yml
@@ -16,6 +16,9 @@
       publication: West Coast Conference on Formal Linguistics 43
       year: 2025
       month: Apr
+      resources:
+        - type: poster
+          url: /files/dou_syntax_wccfl_poster.pdf
     - title: The case for the strong and conditional analysis of permission
       publication: Sinn und Bedeutung 29
       year: 2024
